--- a/styles/contact.css
+++ b/styles/contact.css
@@ -24,7 +24,7 @@ h1 {
 .titling_Container span {
 
     background: var(--accent-color-one);
-    background: linear-gradient(90deg, rgb(34, 194, 226), rgb(0, 106, 192));
+    background: linear-gradient(90deg, var(--gradient-one), var(--gradient-two));
     background-clip: text;
     color: transparent;
     font-size: clamp(2.5rem, 12vw + 0.5rem, 4rem);
@@ -169,7 +169,7 @@ h1 {
 .learn_More_Page:hover {
 
     
-    color:#46e0ff;
+    color:#ffffff;
     /* color: #00b2d6; */
 
 }
@@ -190,7 +190,7 @@ h1 {
 .faq_Section {
 
     background-color: var(--background-color);
-    color: var(--text-color);
+    color: var(--text-color-alt);
     font-family: var(--default-font-family);
     padding: clamp(10px, 8vw, 100px);
     
@@ -261,7 +261,7 @@ h1 {
     .titling_Container span {
     
         background: var(--accent-color-one);
-        background: linear-gradient(90deg, rgb(34, 194, 226), rgb(0, 106, 192));
+        /* background: linear-gradient(90deg, rgb(34, 194, 226), rgb(0, 106, 192)); */
         background-clip: text;
         color: transparent;
         font-size: 72px;
@@ -315,7 +315,7 @@ h1 {
     }
     
     .contact_Card {
-        background-color: var(--contact-card);
+        /* background-color: var(--contact-card); */
         width: 300px;
         height: 300px;
         padding: 20px;
@@ -365,8 +365,8 @@ h1 {
     .learn_More_Page {
     
         text-decoration: none;
-        color:var(--accent-color-one);
-        font-family: var(--default-font-family);
+        /* color:var(--accent-color-one);
+        font-family: var(--default-font-family); */
         font-size: 18px;
         height: 50px;
         display: flex;
@@ -399,13 +399,6 @@ h1 {
     
     }
     
-    .learn_More_Page:hover {
-    
-        
-        color:#46e0ff;
-        /* color: #00b2d6; */
-    
-    }
     
     .learn_More_Container:hover .arrow-Right{
     
@@ -548,7 +541,7 @@ h1 {
     }
     
     .contact_Card {
-        background-color: var(--contact-card);
+        /* background-color: var(--contact-card); */
         width: clamp(300px, 20.5vw, 800px);
         height: clamp(300px, 15.5vw, 600px);
         padding: 20px;
