--- a/styles/faq.css
+++ b/styles/faq.css
@@ -10,7 +10,7 @@ header {
     height:30vh;
     background-color: var(--background-color);
 
-    color: var( --text-color);
+    color: var( --nav-text-color);
     font-family: var(--default-font-family);
 
     display:flex;
@@ -49,7 +49,7 @@ header {
 
 .subtopic h2 {
 
-    color: var(--text-color);
+    color: var(--nav-text-color);
     font-size: clamp(1rem, 1.8vw, 2.3rem);
     font-family: var(--default-font-family);
     margin-bottom: 2vh;
@@ -87,7 +87,7 @@ header {
 
 .subtopic h2 {
 
-    color: var(--text-color);
+    color: var(--nav-text-color);
     font-size: clamp(1rem, 1.8vw, 2.3rem);
     font-family: var(--default-font-family);
     margin-bottom: 2vh;
