--- a/styles/projects.css
+++ b/styles/projects.css
@@ -18,14 +18,14 @@ header {
 .heading_Span {
 
     background: var(--accent-color-one);
-    background: linear-gradient(100deg, #22c2e2 8%, #006ac0 98%);
+    background: linear-gradient(100deg, var(--gradient-one) 8%, var(--gradient-two) 98%);
     background-clip: text;
     color: transparent;
 }
 
 .projects_Main_Heading {
 
-    color: var(--text-color);
+    color: var( --primary-color);
     font-family: var(--default-font-family);
     font-size: clamp(1rem, 13vw + 0.5rem, 4rem);
     padding: 5vw;
