--- a/styles/services.css
+++ b/styles/services.css
@@ -30,8 +30,7 @@ main {
     padding-inline: clamp(20px, 10vw, 100px);
 
     text-align: center;
-    text-shadow: 1px 1px 20px hsla(170, 30%, 8%, 0.829);
-    color: white;
+    color: var(--primary-color);
     font-family: var(--default-font-family);
     font-weight: 900;
     font-size: clamp(1rem, 4vw, 1.3rem);
@@ -39,7 +38,7 @@ main {
 
 h1 span{
 
-    color: var(--accent-color-one);
+    color: var(--gradient-one);
 }
 
 /* intro */
@@ -112,7 +111,7 @@ h1 span{
     align-items: center;
     gap: clamp(1rem, 1.3vw, 3rem);
 
-    color: var(--text-color);
+    color: var(--text-color-alt-two);
     text-align: center;
     font-family: var(--default-font-family);
 }
@@ -431,7 +430,7 @@ h1 span{
         justify-content: space-evenly;
         align-items: center;
     
-        color: var(--text-color);
+        /* color: var(--text-color); */
         text-align: center;
         font-family: var(--default-font-family);
     }
@@ -748,7 +747,7 @@ h1 span{
         justify-content: space-evenly;
         align-items: center;
     
-        color: var(--text-color);
+        /* color: var(--text-color); */
         text-align: center;
         font-family: var(--default-font-family);
         gap: unset;
