Add a fully functioning carousel

--- a/styles/about.css
+++ b/styles/about.css
@@ -114,7 +114,7 @@ body {
     margin: 0 auto;
 
     padding: clamp(20px, 5%, 30px);
-    border-radius: 30px;
+    /* border-radius: 30px; */
 
     background-color: var(--quaternary-color);
 }
@@ -1101,11 +1101,11 @@ body {
         justify-content: space-between;
         gap:2.5%;
         /* flex-direction: column-reverse; */
-        width: 80vw;
+        width: 95vw;
         margin: 0 auto;
     
         padding: clamp(10px, 10%, 20px);
-        border-radius: 30px;
+        /* border-radius: 30px; */
     
         /* background-color: #242424; */
     }
@@ -1113,9 +1113,10 @@ body {
     .wwa_Img_Wrapper {
     
         min-width: clamp(400px, 30vw, 900px);
-        height: clamp(600px, 80vh, 900px);
+        /* height: clamp(600px, 80vh, 900px); */
+        height: unset;
         overflow: hidden;
-        border-radius: 30px;
+        /* border-radius: 30px; */
     
         display: flex;
         justify-content: center;
@@ -1170,7 +1171,8 @@ body {
         /* background-color: #181818; */
     
         padding: 10px 10px;
-        border-radius: 15px;
+        /* border-radius: 15px; */
+        border-radius: 0;
     
         display: flex;
         align-items: center;
@@ -1186,7 +1188,8 @@ body {
         height: clamp(50px, 6vw, 80px);
         width: clamp(50px, 6vw, 80px);
         /* background: #303030; */
-        border-radius: 15px;
+        /* border-radius: 15px; */
+        border-radius: 0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1237,7 +1240,8 @@ body {
         /* background-color: #242424; */
         margin: 0;
         /* height: 60vh; */
-        border-radius: 30px;
+        /* border-radius: 30px; */
+        border-radius: 0;
     
         display: flex;
         flex-direction: row;
@@ -1298,14 +1302,14 @@ body {
         padding: 10px;
         display: flex;
         flex-direction: column;
-        gap: 5px;
+        gap: 10px;
     
 
         /* background-color: rgb(31, 30, 30); */
 
-        border-radius: 20px;
+        /* border-radius: 20px; */
+        border-radius: 0;
         
-        gap: 5px;
         overflow-y: scroll;
         /* scrollbar-color: #00b2d6 #181818; */
     }
@@ -1319,7 +1323,8 @@ body {
         align-items: center;
         height: unset;
         /* was - height: 100px; */
-        border-radius: 15px;
+        /* border-radius: 15px; */
+        border-radius: 0;
     
         /* border: 2px solid #00b2d600;
         background-color: rgb(24, 24, 24); */
@@ -1409,7 +1414,8 @@ body {
         max-width: 100%;
         max-height: 100%;
         padding: 20px;
-        border-radius: 20px;
+        /* border-radius: 20px; */
+        border-radius: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
