--- a/styles/home.css
+++ b/styles/home.css
@@ -4,10 +4,93 @@
     padding: 0;
   }
 
-.intro_Home {
+  .home_Intro {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    max-height: 100vh;
 
+  }
+
+  .carousel {
+  position: relative;    /* contain absolutely‑positioned children */
+  overflow: hidden;      /* clip the sliding list */
   height: 100vh;
   width: 100vw;
+}
+
+.carousel_List {
+  display: flex;                   /* line up slides in a row */
+  height: 100%;                    /* fill the carousel vertically */
+  transition: transform 0.5s ease; /* smooth slide */
+  margin: 0;                       /* remove default ul padding/margins */
+  padding: 0;
+}
+
+.carousel_Item {
+  position: relative;    /* no more absolute! */
+  flex: 0 0 100%;        /* each item is exactly 100% of carousel width */
+  list-style: none;
+  height: 100%;
+}
+
+.carousel_Item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel_Button {
+  height: clamp(50px, 2.5vw, 80px);
+  width:  clamp(50px, 2.5vw, 80px);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: var(--nav-color);
+  border: 1px solid var(--nav-text-color);
+  z-index: 2;
+}
+
+.carousel_Button--left  { left: 2vw; }
+.carousel_Button--right { right: 2vw; }
+
+.carousel_Button--left img  { transform: rotateZ(90deg);  }
+.carousel_Button--right img { transform: rotateZ(-90deg); }
+
+.carousel_Tracker {
+  position: absolute;
+  bottom: 5%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.carousel_Centerer {
+  display: flex;
+  gap: 0.5vw;
+}
+
+.carousel_Indicator {
+  height: 20px;
+  width:  20px;
+  background: rgba(22, 22, 22, 0.36);
+  border-radius: 50%;
+  border: 0.2vw solid transparent;
+  cursor: pointer;
+}
+
+.carousel_Indicator.active_Slide {
+  background-color: rgba(22, 22, 22, 0.68);
+  border-color: rgba(153, 153, 153, 0.58);
+}
+
+.intro_Home {
+
+  /* height: 100vh;
+  width: 100vw; */
   
   display: flex;
   justify-content: center;
@@ -81,12 +164,13 @@
   }
 
   .intro_Right {
-    display: none;
+    display: none!important;
     
   }
   
   .intro_Image {
     height: 100%;
+    
     
     transform: translate(-10%);
     
