--- a/styles/about.css
+++ b/styles/about.css
@@ -319,6 +319,20 @@ body {
     color: var(--accent-color-one);
     border: 2px solid transparent;
     background-color: var( --primary-color);
+   
+}
+
+.service_Container::after{
+
+    content: " ";
+    /* background-color: var(--accent-color-one); */
+    display: block;
+    margin-left: auto;
+    width: 0px;
+    height: 0px;
+    border-left: 12.5px solid var(--accent-color-one);
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
 
    
 }
@@ -374,6 +388,7 @@ body {
     left: 50vw;
     transform: translate(-50%, -50%);
     color: transparent;
+    background-color: var(--distinguished-window);
     
     
     
