--- a/styles/home.css
+++ b/styles/home.css
@@ -42,16 +42,22 @@
 }
 
 .carousel_Button {
-  height: clamp(50px, 2.5vw, 80px);
+  height: clamp(100px, 2.5vw, 160px);
   width:  clamp(50px, 2.5vw, 80px);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  border-radius: 50%;
+  /* border-radius: 50%; */
   cursor: pointer;
   background-color: var(--nav-color);
   border: 1px solid var(--nav-text-color);
   z-index: 2;
+}
+
+.carousel_Button:hover {
+
+  background-color: #94b7d39d;
+  /* border-color:va(--nav-text-color); */
 }
 
 .carousel_Button--left  { left: 2vw; }
@@ -76,15 +82,15 @@
 .carousel_Indicator {
   height: 20px;
   width:  20px;
-  background: rgba(22, 22, 22, 0.36);
+  background: #ffffff4d;
   border-radius: 50%;
   border: 0.2vw solid transparent;
   cursor: pointer;
 }
 
 .carousel_Indicator.active_Slide {
-  background-color: rgba(22, 22, 22, 0.68);
-  border-color: rgba(153, 153, 153, 0.58);
+  background-color: white;
+  border-color: #acacac;
 }
 
 .intro_Home {
