--- a/styles/services.css
+++ b/styles/services.css
@@ -50,7 +50,7 @@ h1 span{
     justify-content: center;
     align-items: center;
 
-    padding: max(2vw, 3%);
+    padding: var(--section-separator-unit) 0;
 
     color: white;
     text-align: center;
@@ -78,10 +78,10 @@ h1 span{
     display: grid;
     grid-auto-flow: row;
     grid-template-columns:repeat(auto-fit, 1fr);
-    padding: clamp(20px, 10vw, 100px);
+    padding: 0 clamp(20px, 10vw, 100px) var(--section-separator-unit) clamp(20px, 10vw, 100px);
     justify-content: center;
     align-items:center;
-    gap: 60px;
+    gap: var(--section-separator-unit);
 }
 
 .service_Container {
@@ -172,7 +172,7 @@ h1 span{
     align-items: center;
 
     width: clamp(100px, 90%, 700px);
-    margin: clamp(10px, 5vh, 100px) auto;
+    margin: var(--section-separator-unit) auto;
     
 
     border-radius: 30px;
@@ -276,15 +276,15 @@ h1 span{
     background-color: var(--distinguished-window);
     display: flex;
     justify-content: center;
-
-    color: white;
+    margin-top: 100px;
+    color: var(--text-color);
     font-family: var(--default-font-family);
 }
 
 .quote_Container {
     display: flex;
     width: 100%;
-    padding: clamp(30px, 1vw, 50px);
+    padding: var(--section-separator-unit) clamp(30px, 1vw, 50px);
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -357,7 +357,7 @@ h1 span{
     .services_Intro {
 
         width: 100%;
-        padding-bottom: 0;
+        /* padding-bottom: 0; */
     
         display: flex;
         flex-direction: column;
@@ -674,7 +674,7 @@ h1 span{
     .services_Intro {
 
         width: 100%;
-        padding: 80px;
+        padding: var(--section-separator-unit-big);
         padding-bottom: 0;
     
         display: flex;
@@ -707,7 +707,7 @@ h1 span{
         display: grid;
         grid-auto-flow: row;
         grid-template-columns:repeat(3, max-content);
-        padding: clamp(20px, 10vw, 100px);
+        padding: var(--section-separator-unit-big);
         justify-content: space-evenly;
         align-items:start;
     }
@@ -797,7 +797,7 @@ h1 span{
     .why_Choose_Container {
 
         width: max-content;
-        margin: clamp(10px, 5vh, 100px) auto;
+        /* margin: var(--section-separator-unit-big) auto; */
     }
 
     .why_Choose_Centerer {
@@ -852,9 +852,9 @@ h1 span{
 
     .quote_Section {
 
-        height: 700px;
+        /* height: 700px; */
         background-color: var(--distinguished-window);
-        padding: 40px 80px;
+        padding: var(--section-separator-unit) 80px;
         display: flex;
         justify-content: center;
     
@@ -1055,7 +1055,7 @@ h1 span{
         font-size: clamp(1.5rem, 1vw, 3rem);
 
         width: max-content;
-        margin: clamp(100px, 5.5vh, 200px) auto;
+        margin: calc(2*var(--section-separator-unit)) auto;
     }
     
     .backdrop_Styling {
