Adjust top padding for wcu section in the services
Adjust the top padding for the why choose us section in the services
page. For more uniformity.

--- a/styles/about.css
+++ b/styles/about.css
@@ -1626,6 +1626,7 @@ body {
         gap: var(--section-separator-unit);
         /* background-color: rgb(24, 24, 24); */
         padding: calc(2*var(--section-separator-unit)) 0;
+        padding-top: 0;
         align-items: center;
     }
     
